--- a/src/board/SINS/SINS.ioc
+++ b/src/board/SINS/SINS.ioc
@@ -12,9 +12,10 @@ PB10.Mode=I2C
 PC10.Locked=true
 RCC.PLLCLKFreq_Value=168000000
 PC10.Signal=USART3_TX
-VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 RCC.PLLQCLKFreq_Value=84000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_IWDG_Init-IWDG-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_RTC_Init-RTC-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true
+PA12.GPIOParameters=GPIO_Label
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true
+PA11.GPIOParameters=GPIO_Label
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 RCC.RTCFreq_Value=32768
 PA3.GPIOParameters=GPIO_Label
@@ -24,29 +25,31 @@ PA2.GPIOParameters=GPIO_Label
 PinOutPanel.RotationAngle=0
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
+Mcu.IP4=RCC
 RCC.FCLKCortexFreq_Value=168000000
+Mcu.IP5=RTC
 Mcu.IP2=I2C2
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP3=IWDG
+Mcu.IP3=NVIC
 Mcu.IP0=ADC1
+PA12.Locked=true
 Mcu.IP1=I2C1
+PA12.Signal=GPIO_Output
 Mcu.UserConstants=
 SH.S_TIM3_CH2.ConfNb=1
 RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSE
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=168000000
-Mcu.IPNb=10
+Mcu.IPNb=9
 RCC.I2SClocksFreq_Value=192000000
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=168000000
 PB6.Signal=S_TIM4_CH1
 RCC.VcooutputI2S=192000000
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA6
 RCC.AHBFreq_Value=168000000
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin0=PC14-OSC32_IN
@@ -60,15 +63,13 @@ ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=8000000
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PB3.Mode=JTAG_4_pins
-PA15.Mode=JTAG_4_pins
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.2
 MxDb.Version=DB.6.0.10
 ProjectManager.BackupPrevious=false
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 RCC.VCOInputFreq_Value=2000000
-PA14.Mode=JTAG_4_pins
+PA14.Mode=Serial_Wire
 File.Version=6
 SH.S_TIM4_CH2.0=TIM4_CH2
 PB7.Signal=S_TIM4_CH2
@@ -92,8 +93,6 @@ PA2.GPIO_Label=GPS_UART_TX
 RCC.LSI_VALUE=32000
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 USART3.IPParameters=VirtualMode
-PA10.Signal=GPIO_Output
-PA15.Signal=SYS_JTDI
 PC11.Mode=Asynchronous
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 SH.S_TIM4_CH1.0=TIM4_CH1
@@ -108,19 +107,21 @@ RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 SH.S_TIM4_CH1.ConfNb=1
 ProjectManager.ProjectFileName=SINS.ioc
-Mcu.PinsNb=28
+Mcu.PinsNb=26
 ProjectManager.NoMain=false
 PC11.Locked=true
 ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,master
 PC11.Signal=USART3_RX
 PC2.Signal=ADCx_IN12
 PC10.Mode=Asynchronous
+PA11.GPIO_Label=PWR_GPS
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PB10.Locked=true
 USART2.BaudRate=9600
+PA12.GPIO_Label=PWR_MEMS
 RCC.FamilyName=M
 PA0-WKUP.Signal=GPIO_Input
 PA0-WKUP.Locked=true
@@ -136,6 +137,7 @@ PB9.Locked=true
 PC2.Locked=true
 ProjectManager.RegisterCallBack=
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PA1.Signal=GPIO_Analog
 PB10.Signal=I2C2_SCL
 RCC.VCOI2SOutputFreq_Value=384000000
 SH.S_TIM3_CH2.0=TIM3_CH2
@@ -150,36 +152,31 @@ SH.ADCx_IN12.ConfNb=1
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-PA13.Mode=JTAG_4_pins
+PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
-IWDG.IPParameters=Prescaler
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F405RGTx
 SH.S_TIM3_ETR.0=TIM3_ETR
-Mcu.Pin26=VP_RTC_VS_RTC_Activate
-Mcu.Pin27=VP_SYS_VS_Systick
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PB9
+Mcu.Pin24=VP_RTC_VS_RTC_Activate
 PA2.Signal=USART2_TX
 ProjectManager.UnderRoot=true
-Mcu.Pin25=VP_IWDG_VS_IWDG
-Mcu.IP8=USART2
-Mcu.IP9=USART3
-Mcu.IP6=RTC
-Mcu.IP7=SYS
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.IP8=USART3
+Mcu.IP6=SYS
+Mcu.IP7=USART2
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=84000000
-PB3.Signal=SYS_JTDO-SWO
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 RCC.SYSCLKFreq_VALUE=168000000
-Mcu.Pin22=PB7
-Mcu.Pin23=PB8
-Mcu.Pin20=PB3
+Mcu.Pin22=PB8
+Mcu.Pin23=PB9
+PA1.Locked=true
+Mcu.Pin20=PB6
 ADC1.master=1
 PA3.Locked=true
-Mcu.Pin21=PB6
-PA10.Locked=true
+Mcu.Pin21=PB7
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 USART3.VirtualMode=VM_ASYNC
@@ -187,14 +184,13 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.CompilerOptimize=6
 ADC1.Rank-1\#ChannelRegularConversion=1
 PA11.Signal=GPIO_Output
-VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PA14
+Mcu.Pin15=PA13
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PA15
+Mcu.Pin16=PA14
 Mcu.Pin13=PA11
-Mcu.Pin14=PA13
+Mcu.Pin14=PA12
 Mcu.Pin19=PD2
 SH.S_TIM3_CH1.ConfNb=1
 ProjectManager.ComputerToolchain=false
@@ -203,13 +199,12 @@ RCC.HSI_VALUE=16000000
 Mcu.Pin18=PC11
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 ADC1.NbrOfConversionFlag=1
-Mcu.Pin11=PB11
-Mcu.Pin12=PA10
+Mcu.Pin11=PB10
+Mcu.Pin12=PB11
 RCC.PLLM=4
 PB8.Mode=I2C
 RCC.PLLN=168
-Mcu.Pin10=PB10
-IWDG.Prescaler=IWDG_PRESCALER_128
+Mcu.Pin10=PA7
 PB7.Locked=true
 PA2.Mode=Asynchronous
 PB8.Signal=I2C1_SCL
