--- a/src/board/SINS/SINS.ioc
+++ b/src/board/SINS/SINS.ioc
@@ -6,15 +6,18 @@ SH.S_TIM4_CH2.ConfNb=1
 PH0-OSC_IN.Signal=RCC_OSC_IN
 USART2.IPParameters=VirtualMode,BaudRate
 RCC.CortexFreq_Value=168000000
+Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F405RGTx
 PB10.Mode=I2C
 PC10.Locked=true
+Dma.I2C1_TX.1.Mode=DMA_NORMAL
 RCC.PLLCLKFreq_Value=168000000
 PC10.Signal=USART3_TX
 RCC.PLLQCLKFreq_Value=84000000
 PA12.GPIOParameters=GPIO_Label
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_RTC_Init-RTC-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true
 PA11.GPIOParameters=GPIO_Label
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 RCC.RTCFreq_Value=32768
@@ -25,27 +28,31 @@ PA2.GPIOParameters=GPIO_Label
 PinOutPanel.RotationAngle=0
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
-Mcu.IP4=RCC
+Dma.I2C1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
 RCC.FCLKCortexFreq_Value=168000000
-Mcu.IP5=RTC
-Mcu.IP2=I2C2
+Mcu.IP2=I2C1
+I2C1.IPParameters=OwnAddress,I2C_Mode
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP3=NVIC
+Mcu.IP3=I2C2
 Mcu.IP0=ADC1
 PA12.Locked=true
-Mcu.IP1=I2C1
+Mcu.IP1=DMA
 PA12.Signal=GPIO_Output
 Mcu.UserConstants=
 SH.S_TIM3_CH2.ConfNb=1
 RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSE
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=168000000
-Mcu.IPNb=9
+Mcu.IPNb=10
 RCC.I2SClocksFreq_Value=192000000
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=168000000
 PB6.Signal=S_TIM4_CH1
 RCC.VcooutputI2S=192000000
+Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_TX.1.PeriphInc=DMA_PINC_DISABLE
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
@@ -56,6 +63,7 @@ Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
 GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PH0-OSC_IN
+Dma.I2C1_RX.0.Priority=DMA_PRIORITY_LOW
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PC2
 Mcu.Pin5=PA0-WKUP
@@ -63,6 +71,7 @@ ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=8000000
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Dma.I2C1_RX.0.Mode=DMA_NORMAL
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.2
 MxDb.Version=DB.6.0.10
@@ -75,8 +84,11 @@ SH.S_TIM4_CH2.0=TIM4_CH2
 PB7.Signal=S_TIM4_CH2
 PB8.Locked=true
 PB6.Locked=true
+Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 SH.S_TIM3_CH1.0=TIM3_CH1
+NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+Dma.RequestsNb=2
 ProjectManager.HalAssertFull=false
 ProjectManager.ProjectName=SINS
 SH.S_TIM3_ETR.ConfNb=1
@@ -96,17 +108,24 @@ USART3.IPParameters=VirtualMode
 PC11.Mode=Asynchronous
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 SH.S_TIM4_CH1.0=TIM4_CH1
+Dma.Request1=I2C1_TX
 RCC.APB1TimFreq_Value=84000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+Dma.Request0=I2C1_RX
 I2C2.I2C_Mode=I2C_Fast
 ProjectManager.CustomerFirmwarePackage=
 PA3.Signal=USART2_RX
 PA2.Locked=true
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+Dma.I2C1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 SH.S_TIM4_CH1.ConfNb=1
+Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
 ProjectManager.ProjectFileName=SINS.ioc
+Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Mcu.PinsNb=26
 ProjectManager.NoMain=false
 PC11.Locked=true
@@ -131,8 +150,11 @@ PA11.Locked=true
 SH.ADCx_IN12.0=ADC1_IN12,IN12
 PB11.Mode=I2C
 ProjectManager.TargetToolchain=STM32CubeIDE
+I2C1.I2C_Mode=I2C_Fast
 PB9.Mode=I2C
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_12
+Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_TX.1.Instance=DMA1_Stream6
 PB9.Locked=true
 PC2.Locked=true
 ProjectManager.RegisterCallBack=
@@ -143,29 +165,35 @@ RCC.VCOI2SOutputFreq_Value=384000000
 SH.S_TIM3_CH2.0=TIM3_CH2
 board=custom
 RCC.VCOOutputFreq_Value=336000000
+Dma.I2C1_TX.1.Priority=DMA_PRIORITY_LOW
 ProjectManager.LastFirmware=true
+Dma.I2C1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 RCC.APB2Freq_Value=84000000
 MxCube.Version=6.1.1
+Dma.I2C1_TX.1.MemInc=DMA_MINC_ENABLE
 VP_SYS_VS_Systick.Mode=SysTick
 RCC.EthernetFreq_Value=168000000
 SH.ADCx_IN12.ConfNb=1
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+Dma.I2C1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 ProjectManager.AskForMigrate=true
-Mcu.Name=STM32F405RGTx
 SH.S_TIM3_ETR.0=TIM3_ETR
+Mcu.Name=STM32F405RGTx
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=VP_RTC_VS_RTC_Activate
 PA2.Signal=USART2_TX
+Mcu.Pin24=VP_RTC_VS_RTC_Activate
 ProjectManager.UnderRoot=true
 Mcu.Pin25=VP_SYS_VS_Systick
-Mcu.IP8=USART3
-Mcu.IP6=SYS
-Mcu.IP7=USART2
+I2C1.OwnAddress=0x7A
+Mcu.IP8=USART2
+Mcu.IP9=USART3
+Mcu.IP6=RTC
+Mcu.IP7=SYS
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=84000000
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
@@ -187,6 +215,8 @@ PA11.Signal=GPIO_Output
 PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x200
 Mcu.Pin15=PA13
+Dma.I2C1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.I2C1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.Pin16=PA14
 Mcu.Pin13=PA11
@@ -210,6 +240,7 @@ PA2.Mode=Asynchronous
 PB8.Signal=I2C1_SCL
 PD2.Signal=S_TIM3_ETR
 RCC.APB1Freq_Value=42000000
+Dma.I2C1_RX.0.Instance=DMA1_Stream0
 PB11.Locked=true
 ProjectManager.DeviceId=STM32F405RGTx
 ProjectManager.LibraryCopy=1
