--- a/src/board/SINS/SINS.ioc
+++ b/src/board/SINS/SINS.ioc
@@ -16,9 +16,9 @@ Dma.I2C1_TX.1.Mode=DMA_NORMAL
 RCC.PLLCLKFreq_Value=168000000
 PC10.Signal=USART3_TX
 RCC.PLLQCLKFreq_Value=84000000
-PA12.GPIOParameters=GPIO_Label
+PA12.GPIOParameters=PinState,GPIO_Label
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_RTC_Init-RTC-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true
-PA11.GPIOParameters=GPIO_Label
+PA11.GPIOParameters=PinState,GPIO_Label
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 RCC.RTCFreq_Value=32768
 PA3.GPIOParameters=GPIO_Label
@@ -67,6 +67,7 @@ Dma.I2C1_RX.0.Priority=DMA_PRIORITY_LOW
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PC2
 Mcu.Pin5=PA0-WKUP
+PA12.PinState=GPIO_PIN_SET
 ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=8000000
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -133,7 +134,7 @@ ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConv
 PC11.Signal=USART3_RX
 PC2.Signal=ADCx_IN12
 PC10.Mode=Asynchronous
-PA11.GPIO_Label=PWR_GPS
+PA11.GPIO_Label=PWR_MEMS
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -141,7 +142,7 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PB10.Locked=true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:false\:true\:false
 USART2.BaudRate=9600
-PA12.GPIO_Label=PWR_MEMS
+PA12.GPIO_Label=PWR_GPS
 RCC.FamilyName=M
 PA0-WKUP.Signal=GPIO_Input
 PA0-WKUP.Locked=true
@@ -240,6 +241,7 @@ PB7.Locked=true
 PA2.Mode=Asynchronous
 PB8.Signal=I2C1_SCL
 PD2.Signal=S_TIM3_ETR
+PA11.PinState=GPIO_PIN_SET
 RCC.APB1Freq_Value=42000000
 Dma.I2C1_RX.0.Instance=DMA1_Stream0
 PB11.Locked=true
