--- a/src/board/SINS/SINS.ioc
+++ b/src/board/SINS/SINS.ioc
@@ -13,19 +13,26 @@ Mcu.UserName=STM32F405RGTx
 PB10.Mode=I2C
 PC10.Locked=true
 Dma.I2C1_TX.1.Mode=DMA_NORMAL
+ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 RCC.PLLCLKFreq_Value=168000000
 PC10.Signal=USART3_TX
 RCC.PLLQCLKFreq_Value=84000000
+PC5.Locked=true
 PA12.GPIOParameters=PinState,GPIO_Label
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_RTC_Init-RTC-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true
+PC0.GPIOParameters=GPIO_Label
 PA11.GPIOParameters=PinState,GPIO_Label
+PC0.GPIO_Label=LDiod7
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 RCC.RTCFreq_Value=32768
 PA3.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=LDiod5
 PD2.Locked=true
+PC1.Locked=true
 PB11.Signal=I2C2_SDA
 PA2.GPIOParameters=GPIO_Label
 PinOutPanel.RotationAngle=0
+ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_12
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
 Dma.I2C1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
@@ -40,10 +47,13 @@ Mcu.IP0=ADC1
 PA12.Locked=true
 Mcu.IP1=DMA
 PA12.Signal=GPIO_Output
-Mcu.UserConstants=
+Mcu.UserConstants=ADC_TIMEOUT,100
+ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_9
 SH.S_TIM3_CH2.ConfNb=1
+PC1.GPIOParameters=GPIO_Label
 RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSE
 Mcu.ThirdPartyNb=0
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_5
 RCC.HCLKFreq_Value=168000000
 Mcu.IPNb=10
 RCC.I2SClocksFreq_Value=192000000
@@ -51,12 +61,13 @@ ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=168000000
 PB6.Signal=S_TIM4_CH1
 RCC.VcooutputI2S=192000000
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_4
 Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA6
+Mcu.Pin6=PC2
+Mcu.Pin7=PA0-WKUP
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
 RCC.AHBFreq_Value=168000000
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin0=PC14-OSC32_IN
@@ -65,25 +76,40 @@ GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PH0-OSC_IN
 Dma.I2C1_RX.0.Priority=DMA_PRIORITY_LOW
 Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin4=PC2
-Mcu.Pin5=PA0-WKUP
+Mcu.Pin4=PC0
+Mcu.Pin5=PC1
 PA12.PinState=GPIO_PIN_SET
 ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=8000000
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+ADC1.ScanConvMode=ENABLE
+PA4.Locked=true
 Dma.I2C1_RX.0.Mode=DMA_NORMAL
+SH.ADCx_IN14.ConfNb=1
+SH.ADCx_IN15.0=ADC1_IN15,IN15
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
+ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 MxDb.Version=DB.6.0.21
+ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_10
+PB0.GPIOParameters=GPIO_Label
+ADC1.Rank-2\#ChannelRegularConversion=2
+PA1.GPIOParameters=GPIO_Label
 ProjectManager.BackupPrevious=false
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 RCC.VCOInputFreq_Value=2000000
+PC4.GPIO_Label=LDiod9
 PA14.Mode=Serial_Wire
+SH.ADCx_IN1.ConfNb=1
+PB1.GPIO_Label=LDiod6
 File.Version=6
+SH.ADCx_IN8.0=ADC1_IN8,IN8
 SH.S_TIM4_CH2.0=TIM4_CH2
+SH.ADCx_IN11.ConfNb=1
 PB7.Signal=S_TIM4_CH2
 PB8.Locked=true
+SH.ADCx_IN4.ConfNb=1
 PB6.Locked=true
 Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -91,14 +117,18 @@ SH.S_TIM3_CH1.0=TIM3_CH1
 NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 Dma.RequestsNb=2
 ProjectManager.HalAssertFull=false
+PB0.Locked=true
 ProjectManager.ProjectName=SINS
-SH.S_TIM3_ETR.ConfNb=1
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
+SH.S_TIM3_ETR.ConfNb=1
 RCC.MCO2PinFreq_Value=168000000
 Mcu.Package=LQFP64
 PB9.Signal=I2C1_SDA
+PB1.Signal=ADCx_IN9
 PA6.Signal=S_TIM3_CH1
 PA7.Locked=true
+PA5.Locked=true
+SH.ADCx_IN14.0=ADC1_IN14,IN14
 USART2.VirtualMode=VM_ASYNC
 RCC.EnbaleCSS=true
 ProjectManager.ToolChainLocation=
@@ -106,64 +136,87 @@ PA2.GPIO_Label=GPS_UART_TX
 RCC.LSI_VALUE=32000
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 USART3.IPParameters=VirtualMode
+PA5.GPIOParameters=GPIO_Label
 PC11.Mode=Asynchronous
+SH.ADCx_IN9.0=ADC1_IN9,IN9
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
+SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.S_TIM4_CH1.0=TIM4_CH1
 Dma.Request1=I2C1_TX
 RCC.APB1TimFreq_Value=84000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PC4.Locked=true
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+PC5.Signal=ADCx_IN15
+SH.ADCx_IN9.ConfNb=1
+ADC1.Rank-6\#ChannelRegularConversion=6
 Dma.Request0=I2C1_RX
+NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 I2C2.I2C_Mode=I2C_Fast
+PA4.GPIO_Label=LDiod2
+PC2.GPIO_Label=LDiod4
 ProjectManager.CustomerFirmwarePackage=
+PC4.GPIOParameters=GPIO_Label
+ADC1.Rank-4\#ChannelRegularConversion=4
 PA3.Signal=USART2_RX
 PA2.Locked=true
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 Dma.I2C1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_15
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 SH.S_TIM4_CH1.ConfNb=1
 Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
 ProjectManager.ProjectFileName=SINS.ioc
 Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Mcu.PinsNb=26
+ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_8
+Mcu.PinsNb=34
+ADC1.Rank-10\#ChannelRegularConversion=10
 ProjectManager.NoMain=false
 PC11.Locked=true
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ScanConvMode,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,NbrOfConversion
+ADC1.Rank-8\#ChannelRegularConversion=8
 PC11.Signal=USART3_RX
 PC2.Signal=ADCx_IN12
+PC4.Signal=ADCx_IN14
 PC10.Mode=Asynchronous
 PA11.GPIO_Label=PWR_MEMS
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
+PC0.Signal=ADCx_IN10
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PB10.Locked=true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:false\:true\:false
 USART2.BaudRate=9600
 PA12.GPIO_Label=PWR_GPS
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 RCC.FamilyName=M
 PA0-WKUP.Signal=GPIO_Input
+ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_11
 PA0-WKUP.Locked=true
-PA13.Signal=SYS_JTMS-SWDIO
 PA3.Mode=Asynchronous
+PA13.Signal=SYS_JTMS-SWDIO
 PA11.Locked=true
 SH.ADCx_IN12.0=ADC1_IN12,IN12
 PB11.Mode=I2C
 ProjectManager.TargetToolchain=STM32CubeIDE
 I2C1.I2C_Mode=I2C_Fast
+PC5.GPIOParameters=GPIO_Label
 PB9.Mode=I2C
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
 Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
 Dma.I2C1_TX.1.Instance=DMA1_Stream6
 PB9.Locked=true
 PC2.Locked=true
 ProjectManager.RegisterCallBack=
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PA1.Signal=GPIO_Analog
+PA1.Signal=ADCx_IN1
+PB1.Locked=true
 PB10.Signal=I2C2_SCL
 RCC.VCOI2SOutputFreq_Value=384000000
+PA5.Signal=ADCx_IN5
 SH.S_TIM3_CH2.0=TIM3_CH2
 board=custom
 RCC.VCOOutputFreq_Value=336000000
@@ -171,83 +224,121 @@ Dma.I2C1_TX.1.Priority=DMA_PRIORITY_LOW
 ProjectManager.LastFirmware=true
 Dma.I2C1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 RCC.APB2Freq_Value=84000000
+SH.ADCx_IN11.0=ADC1_IN11,IN11
 MxCube.Version=6.2.1
 Dma.I2C1_TX.1.MemInc=DMA_MINC_ENABLE
+PC2.GPIOParameters=GPIO_Label
+SH.ADCx_IN10.ConfNb=1
+Mcu.Pin30=PB8
+PC1.GPIO_Label=LDiod8
+PA1.GPIO_Label=LDiod1
 VP_SYS_VS_Systick.Mode=SysTick
 RCC.EthernetFreq_Value=168000000
 SH.ADCx_IN12.ConfNb=1
+Mcu.Pin33=VP_SYS_VS_Systick
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
+SH.ADCx_IN15.ConfNb=1
+Mcu.Pin31=PB9
 RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
+SH.ADCx_IN4.0=ADC1_IN4,IN4
+Mcu.Pin32=VP_RTC_VS_RTC_Activate
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 Dma.I2C1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+PA4.GPIOParameters=GPIO_Label
+ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
+SH.ADCx_IN8.ConfNb=1
+ADC1.Rank-9\#ChannelRegularConversion=9
+ADC1.NbrOfConversion=10
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 ProjectManager.AskForMigrate=true
-SH.S_TIM3_ETR.0=TIM3_ETR
 Mcu.Name=STM32F405RGTx
+SH.S_TIM3_ETR.0=TIM3_ETR
+Mcu.Pin26=PC11
+Mcu.Pin27=PD2
 RCC.RTCHSEDivFreq_Value=4000000
 PA2.Signal=USART2_TX
-Mcu.Pin24=VP_RTC_VS_RTC_Activate
+Mcu.Pin24=PA14
 ProjectManager.UnderRoot=true
-Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin25=PC10
 I2C1.OwnAddress=0x7A
 Mcu.IP8=USART2
+ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_14
 Mcu.IP9=USART3
+Mcu.Pin28=PB6
 Mcu.IP6=RTC
+Mcu.Pin29=PB7
 Mcu.IP7=SYS
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=84000000
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+PA4.Signal=ADCx_IN4
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 RCC.SYSCLKFreq_VALUE=168000000
-Mcu.Pin22=PB8
-Mcu.Pin23=PB9
+Mcu.Pin22=PA12
+Mcu.Pin23=PA13
 PA1.Locked=true
-Mcu.Pin20=PB6
+Mcu.Pin20=PB11
 ADC1.master=1
 PA3.Locked=true
-Mcu.Pin21=PB7
+Mcu.Pin21=PA11
+PA5.GPIO_Label=LDiod3
+ADC1.Rank-3\#ChannelRegularConversion=3
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
+PC5.GPIO_Label=LDiod10
 USART3.VirtualMode=VM_ASYNC
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.CompilerOptimize=6
 ADC1.Rank-1\#ChannelRegularConversion=1
 PA11.Signal=GPIO_Output
 PA14.Signal=SYS_JTCK-SWCLK
+SH.ADCx_IN10.0=ADC1_IN10,IN10
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PA13
+Mcu.Pin15=PC4
 Dma.I2C1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.I2C1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PA14
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
-Mcu.Pin19=PD2
+Mcu.Pin16=PC5
+Mcu.Pin13=PA6
+Mcu.Pin14=PA7
+Mcu.Pin19=PB10
+ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 SH.S_TIM3_CH1.ConfNb=1
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PC10
+Mcu.Pin17=PB0
 RCC.HSI_VALUE=16000000
-Mcu.Pin18=PC11
+Mcu.Pin18=PB1
+SH.ADCx_IN5.0=ADC1_IN5,IN5
+ADC1.Rank-7\#ChannelRegularConversion=7
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 ADC1.NbrOfConversionFlag=1
-Mcu.Pin11=PB10
-Mcu.Pin12=PB11
+Mcu.Pin11=PA4
+Mcu.Pin12=PA5
 RCC.PLLM=4
 PB8.Mode=I2C
 RCC.PLLN=168
-Mcu.Pin10=PA7
+Mcu.Pin10=PA3
 PB7.Locked=true
 PA2.Mode=Asynchronous
 PB8.Signal=I2C1_SCL
+SH.ADCx_IN5.ConfNb=1
+ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
+ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 PD2.Signal=S_TIM3_ETR
 PA11.PinState=GPIO_PIN_SET
 RCC.APB1Freq_Value=42000000
+PB0.Signal=ADCx_IN8
 Dma.I2C1_RX.0.Instance=DMA1_Stream0
+PC0.Locked=true
 PB11.Locked=true
+ADC1.Rank-5\#ChannelRegularConversion=5
 ProjectManager.DeviceId=STM32F405RGTx
+PC1.Signal=ADCx_IN11
 ProjectManager.LibraryCopy=1
 PA3.GPIO_Label=GPS_UART_RX
+PB1.GPIOParameters=GPIO_Label
 PA7.Signal=S_TIM3_CH2
 PA6.Locked=true
 isbadioc=false
